@@ -2,6 +2,9 @@
  [Common]
  - Move author tests to xt/ directory.
 
+ [Log::FreeSWITCH::Line]
+ - Add SEE ALSO section to doc.
+
 0.05 2015-05-19T17:02:04+02:00
  [Common]
  - Update Module::Install to 1.16 version.
